[package]
name = "rust_decompile_apk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.18"
console = "0.15.2"
execute = "0.2.11"
text2art = "1.0.1"

[build-dependencies]
fs_extra = "1.2.0"
